test/spec_vectors/ref/fail/module_11.wat
(module (func $if-invalid (drop (if (result (ref 1)) (then) (else)))))